[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "subrpcer"
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subrpcer"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# crates.io
once_cell  = { version = "1.12", optional = true }
reqwest    = { version = "0.11", optional = true, features = ["json"] }
serde      = { version = "1.0" }
serde_json = { version = "1.0" }
tracing    = { version = "0.1", optional = true }
ureq       = { version = "2.5", optional = true, features = ["json"] }
# hack-ink
subrpcer-impl = { version = "0.9", path = "impl" }

[features]
debug = [
	# hack-ink
	"subrpcer-impl/debug",
]


reqwest-client = [
	# crates.io
	"once_cell",
	"reqwest",
]
ureq-client = [
	# crates.io
	"ureq",
]
