[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "Minimal implementation of Substrate RPC APIs."
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subrpcer"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.0-rc17"

[dependencies]
# crates.io
# TODO: https://github.com/dtolnay/paste/issues/72
affix      = { version = "0.1" }
once_cell  = { workspace = true, optional = true }
reqwest    = { workspace = true, optional = true, features = ["json"] }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true, optional = true }
ureq       = { version = "2.5", optional = true, features = ["json"] }

[features]
reqwest-client = [
	# crates.io
	"once_cell",
	"reqwest",
]
ureq-client = [
	# crates.io
	"ureq",
]
