[package]
authors.workspace    = true
description          = "Minimal implementation of Substrate RPC APIs."
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "subrpcer"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[dependencies]
# crates.io
# TODO: https://github.com/dtolnay/paste/issues/72
affix      = { version = "0.1" }
once_cell  = { workspace = true, optional = true }
reqwest    = { workspace = true, optional = true, features = ["json"] }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true, optional = true }
ureq       = { version = "2.6", optional = true, features = ["json"] }

[features]
reqwest-client = [
	# crates.io
	"once_cell",
	"reqwest",
]
ureq-client = [
	# crates.io
	"ureq",
]
