[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "Minimal implementation of Substrate runtime."
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subruntimer"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.0-rc17"

[dependencies]
# crates.io
serde = { workspace = true, optional = true, features = ["derive"] }
