[package]
authors.workspace    = true
description          = "Minimal implementation of Substrate runtime."
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "subruntimer"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[dependencies]
# crates.io
serde = { workspace = true, optional = true, features = ["derive"] }
