[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "Minimal implementation of Substrate spec."
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subspector"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.0-rc16"

[dependencies]
# crates.io
fxhash     = { version = "0.2" }
serde      = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
