[package]
authors.workspace    = true
description          = "Minimal implementation of Substrate spec."
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "subspector"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[dependencies]
# crates.io
fxhash     = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
