[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "Minimal implementation of Substrate storage."
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "substorager"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.0-rc13"

[dependencies]
# crates.io
array-bytes        = { version = "4.1" }
parity-scale-codec = { version = "3.2", optional = true, features = ["derive"] }
# hack-ink
subhasher = { version = "0.9.0-rc13", path = "../subhasher" }

[features]
codec = [
	# crates.io
	"parity-scale-codec",
]
