[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "Minimal implementation of Substrate storage."
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "substorager"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.0-rc18"

[dependencies]
# crates.io
array-bytes        = { workspace = true }
parity-scale-codec = { workspace = true, optional = true, features = ["derive"] }
# hack-ink
subhasher = { workspace = true }

[features]
codec = [
	# crates.io
	"parity-scale-codec",
]
