[package]
authors.workspace    = true
description          = "Minimal implementation of Substrate storage."
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "substorager"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[dependencies]
# crates.io
array-bytes        = { workspace = true }
parity-scale-codec = { workspace = true, optional = true, features = ["derive"] }
# hack-ink
subhasher = { workspace = true }

[features]
codec = [
	# crates.io
	"parity-scale-codec",
]
