[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "subversion"
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subversion"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# crates.io
serde = { version = "1.0", optional = true, features = ["derive"] }
