[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "Minimal implementation of Substrate version."
edition     = "2021"
homepage    = "https://subalfred.hack.ink"
license     = "GPL-3.0"
name        = "subversioner"
readme      = "README.md"
repository  = "https://github.com/hack-ink/subalfred"
version     = "0.9.1"

[dependencies]
# crates.io
serde = { workspace = true, optional = true, features = ["derive"] }
