[package]
authors.workspace    = true
description          = "Minimal implementation of Substrate version."
edition.workspace    = true
homepage.workspace   = true
license.workspace    = true
name                 = "subversioner"
readme               = "README.md"
repository.workspace = true
version.workspace    = true

[dependencies]
# crates.io
serde = { workspace = true, optional = true, features = ["derive"] }
